# CSPenguin-Installer

./: README.md  debug.sh  install.sh  uninstall.sh
patches/dcomp/: dcomp.def  dcomp_csp.cpp
patches/thumbnailer/: Cargo.toml  clip-thumbnailer  main.rs
